Align `develop` branch with other main ones
Now `develop` is aligned with `prerelease` and other branches, it contains the configuration for build release versions of the app.
Also many BuildConfig fields have been removed: some of them have been replaced by `BuildConfig.DEBUG`, instead of make that differentiation on branches; other didn't have sense to exist, so a comment has been left there.
Sentry logs ( before not present on `develop` ) have been added with a check `if (!BuildConfig.DEBUG)` for bein' executed only on release version.
Gradle version has been updated to 6.3 for being able to work with JDK 14.
Affected: Gradle version, release config for `develop`, Sentry logs on `develop`, BuildConfig fields

Ticket: none

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 import Plugin
 import Project
+import Module
 
 apply plugin: Plugin.android_application.id
 apply plugin: Plugin.kotlin_android.id
@@ -179,7 +180,7 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
 
-
+        // Sensitive data
         buildConfigField "String", "SENTRY_DNS_1", "\"${privateProperties.sentryDNS_1}\""
         buildConfigField "String", "SENTRY_DNS_2", "\"${privateProperties.sentryDNS_2}\""
         buildConfigField "String", "SAFETY_NET_API_KEY", "\"${privateProperties.safetyNet_apiKey}\""
@@ -188,21 +189,9 @@ android {
         buildConfigField "String", "H_ENDPOINT_URL", "\"${privateProperties.h_endpointUrl}\""
         buildConfigField "String", "PM_CLIENT_SECRET", "\"${privateProperties.pm_clientSecret}\""
 
-        buildConfigField "boolean", "LOGOUT_WHEN_UPDATE", "false" // master key
-        buildConfigField "boolean", "LOGOUT_EVERY_PREVIOUS_VERSION", "false"
-        buildConfigField "int[]", "LOGOUT_PREVIOUS_VERSIONS", "{}"
-        buildConfigField "int", "SETTINGS_UPDATED_VERSION", "${versionCode}"
         buildConfigField "boolean", "FETCH_FULL_CONTACTS", "true"
-        buildConfigField "boolean", "CLEAR_MESSAGES_TABLE", "false"
-        buildConfigField "boolean", "FETCH_USER_INFO", "true"
         buildConfigField "boolean", "REREGISTER_FOR_PUSH", "true"
-        buildConfigField "boolean", "REFETCH_MAIL_SETTINGS", "true"
-        buildConfigField "boolean", "MIGRATE_TO_1_12_3", "false"
-        buildConfigField "boolean", "MIGRATE_TO_703", "false"
-        buildConfigField "boolean", "MIGRATE_MULTI_USER", "true"
-        buildConfigField "int", "MIGRATE_MULTI_USER_MIN_VERSION", "652"
         buildConfigField "int", "ROOM_DB_VERSION", "${databaseVersion}"
-        buildConfigField "boolean", "MIGRATE_VALUES_TO_USER_SPECIFIC_SHARED_PREFERENCES", "true"
 
         javaCompileOptions {
             annotationProcessorOptions {
