--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ def databaseVersion = 1
 
 detekt {
     failFast = false
-    config = files("$projectDir/config/detekt/detekt.yml")
+    config = files("$rootDir/detekt/config.yml")
 
     reports {
         xml {
@@ -119,9 +119,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v13'
     }
 
-    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.5.0'
+    detekt 'io.gitlab.arturbosch.detekt:detekt-cli:1.8.0'
     detektPlugins 'pm.algirdas.detekt:codeanalysis:0.2.2'
-    detektPlugins 'io.gitlab.arturbosch.detekt:detekt-formatting:1.5.0'
+    detektPlugins 'io.gitlab.arturbosch.detekt:detekt-formatting:1.8.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.media:media:1.1.0-alpha04'
