--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,11 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-jenkinsBuildNumber=1
 android.useDeprecatedNdk=true
 org.gradle.jvmargs=-Xmx2048M
 kotlin.coroutines=enable
 android.useAndroidX=true
 android.enableJetifier=true
+
+# App
+DATABASE_VERSION=1
