Optimised Android test for CI
#comment Generic `test` which is appropriate for plain Java, has been replaced with `testDebugUnitTest` which executes test of only one configuration, instead of for every configuration
Affected: CI tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ unit tests:
     #    - android
     - experimental
   script:
-    - ./gradlew test
+    - ./gradlew testDebugUnitTest
 
 #firebase tests:
 #  stage: test
