Fixed Detekt report's location
#comment Changed detekt's report location to the right path for CI
Affected: Code climate reports for MRs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ detekt analysis:
     - ./gradlew detekt
   artifacts:
     reports:
-        codequality: reports/detekt.json
+        codequality: detekt/report.json
 
 build debug:
   stage: build
