Test assertions and Rules/interfaces
#comment ArchTest.kt, CoroutinesTest.kt and Assertions.kt ported from Composer branch.
Added ViewStateStoreTest.kt
Slightly changed Detekt config for:
* exclude `TooGenericExceptionThrown` from test classes
* Allow function naming stating with uppercase, which a common Kotlin pattern for create virtual constructors
* Allow wildcard import `kotlin.test.*`
Affected: nothing

--- a/detekt/config.yml
+++ b/detekt/config.yml
@@ -228,6 +228,7 @@ exceptions:
     # allowedExceptionNameRegex: "^(_|(ignore|expected).*)"
   TooGenericExceptionThrown:
     active: true
+    excludes: ['**/test/**', '**/androidTest/**', 'buildSrc/**']
     exceptionNames:
      - Error
      - Exception
@@ -374,7 +375,7 @@ naming:
     # minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    functionPattern: '^([a-z$][a-zA-Z$0-9]*)|(`.*`)$'
+    functionPattern: '^([a-zA-Z$][a-zA-Z$0-9]*)|(`.*`)$'
     excludeClassPattern: '$^'
     ignoreOverridden: true
   FunctionParameterNaming:
@@ -628,4 +629,4 @@ style:
     active: true
   WildcardImport:
     active: true
-    excludeImports: ['java.util.*', 'kotlinx.android.synthetic.*', 'studio.forface.easygradle.dsl.*', 'studio.forface.easygradle.dsl.android.*']
+    excludeImports: ['java.util.*', 'kotlin.test.*', 'kotlinx.android.synthetic.*', 'studio.forface.easygradle.dsl.*', 'studio.forface.easygradle.dsl.android.*']
