Changed build version and removed deleted CI tag
#comment Just increased the build version code for a new beta and removed the `experimental` tag from CI jobs
Affected: CI builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,7 @@ detekt analysis:
 build debug:
   stage: build
   tags:
-    #    - android
-    - experimental
+    - android
   script:
     - ./gradlew assembleBetaDebug
     - ./gradlew assembleBetaDebugAndroidTest
@@ -80,8 +79,7 @@ build release:
 unit tests:
   stage: test
   tags:
-    #    - android
-    - experimental
+    - android
   script:
     - ./gradlew testDebugUnitTest
 
