Multi-module Detekt support
* Updated EasyGradle in order to ensure to have declared explicitly all the libs versions in versionsConfig.kt - previous version had default values
* Renamed `Project` in buildSrc to ProtonMail.kt, in order to avoid conflicts with Gradle's Project type
* Created setup for Detekt in detekt.kt
* Changed report path into .gitlab-ci.yml
* Clean up for Project's build.gradle.kts with help of kotlin.kt
Affected: Build Config

MAILAND-698

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,10 +32,10 @@ detekt analysis:
   tags:
     - android
   script:
-    - ./gradlew detekt
+    - ./gradlew multiModuleDetekt
   artifacts:
     reports:
-        codequality: detekt/report.json
+        codequality: detekt/reports/mergedReport.json
 
 build debug:
   stage: build
