Removed detekt/reports from repository
#comment Removed detekt/reports from repository and added them to .gitignore
It have little sense to keep them synced on local machines, they will create useless changes in commits
Affected: nothing

MAILAND-698

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ proguard/
 # Room database schemas
 app/schemas/
 
+# Reports
+detekt/reports
+
 # contact the lead to get access to these files
 privateConfig
 sentry.properties
