Imported Detekt setup from Core library
#comment Removed built-in Detekt setup and switched with the one from Core Util Gradle package
Affected: detekt reports and code climate on CI

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ proguard/
 app/schemas/
 
 # Reports
-detekt/reports
+config/detekt/reports
 
 # contact the lead to get access to these files
 privateConfig
