Usage of unified Detekt config from Core
Affected: build config

--- a/config/detekt/config.yml
+++ b/config/detekt/config.yml
@@ -1,6 +1,8 @@
+# Integrity check *
+
 # Default excluded files are `` ['**/test/**', '**/androidTest/**', '**/buildSrc/**'] ``
 build:
-  maxIssues: 10897 #was 11660
+  maxIssues: 999999 # No threshold set
   excludeCorrectable: false
   weights:
     # complexity: 2
