--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,6 +81,7 @@ unit tests:
   tags:
     - android
   script:
+    - ./gradlew :domain:test
     - ./gradlew testDebugUnitTest
 
 #firebase tests:
