--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ config/detekt/reports/
 # Gradle files
 .gradle/
 build/
+scripts/extract_dependencies/raw_dependencies.txt
 
 # Local configuration file (sdk path, etc)
 local.properties
