--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mac OS
+.DS_Store
+
 # Built application files
 *.apk
 *.ap_
@@ -11,6 +14,8 @@
 # Generated files
 bin/
 gen/
+ajcore.*.txt
+config/detekt/reports/
 
 # Gradle files
 .gradle/
@@ -25,17 +30,94 @@ proguard/
 # Log Files
 *.log
 
-.idea/
-.DS_Store
-*.iml
-ajcore.*.txt
-
 # Room database schemas
 app/schemas/
 
-# Reports
-config/detekt/reports
-
-# contact the lead to get access to these files
-privateConfig
+# Creadentials - contact the lead to get access to these files
+privateConfig/
 sentry.properties
+
+
+
+# # # # # # # # #
+# IDEA SETTINGS #
+# # # # # # # # #
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries/**
+# Do not exclude project Dictionary
+!.idea/**/dictionaries/project.xml
+.idea/**/shelf
+.idea/runConfigurations.xml
+
+# Generated files
+.idea/**/contentModel.xml
+
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
+
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+.idea/artifacts
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
+*.iml
+*.ipr
+
+# CMake
+cmake-build-*/
+
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
+
+# File-based project format
+*.iws
+
+# IntelliJ
+out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# Cursive Clojure plugin
+.idea/replstate.xml
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Editor-based Rest Client
+.idea/httpRequests
+
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
+
+# # # # # # # # #
+# IDEA SETTINGS #
+# # # # # # # # #
