Updated Detekt rules and removed misc.xml
Synced Detekt rules-set from Core project
Removed misc.xml because it contains values that can vary on different JDK setups
Affected: none

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ sentry.properties
 !.idea/**/dictionaries/project.xml
 .idea/**/shelf
 .idea/runConfigurations.xml
+.idea/misc.xml
 
 # Generated files
 .idea/**/contentModel.xml
