--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ch.protonmail.android">
+    package="ch.protonmail.android"
+    android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
