Setup tests for plain Kotlin modules
With the newly create 'allTest' task, it will run 'testDebugUnitTest' for Android modules and 'test' on plain Kotlin ones
Affected: Tests on CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,8 +82,7 @@ unit tests:
   tags:
     - android
   script:
-    - ./gradlew :domain:test
-    - ./gradlew testDebugUnitTest
+    - ./gradlew -Pci --console=plain allTest
 
 
 firebase tests:
